# closure-templates

./: BUILD.bazel  WORKSPACE  pom.xml
.bazelci/: presubmit.yml
examples/: BUILD.bazel
java/src/com/google/template/soy/: AbstractSoyCompiler.java  BUILD.bazel
java/src/com/google/template/soy/base/: BUILD.bazel
java/src/com/google/template/soy/error/: BUILD.bazel
java/src/com/google/template/soy/examples/: BUILD.bazel
java/src/com/google/template/soy/exprtree/: BUILD.bazel  TemplateLiteralNode.java
java/src/com/google/template/soy/idomsrc/: BUILD.bazel  IdomTranslateExprNodeVisitor.java
java/src/com/google/template/soy/internal/base/: BUILD.bazel
java/src/com/google/template/soy/internal/i18n/: BidiGlobalDir.java  SoyBidiUtils.java
java/src/com/google/template/soy/internal/proto/: BUILD.bazel
java/src/com/google/template/soy/internal/targetexpr/: BUILD.bazel
java/src/com/google/template/soy/javagencode/javatypes/: JavaTypeUtils.java
java/src/com/google/template/soy/jbcsrc/restricted/: Expression.java  SoyRuntimeType.java
java/src/com/google/template/soy/jssrc/internal/: GenJsCodeVisitor.java  JsType.java  TranslateExprNodeVisitor.java
java/src/com/google/template/soy/msgs/: BUILD.bazel
java/src/com/google/template/soy/msgs/internal/: BUILD.bazel
java/src/com/google/template/soy/msgs/restricted/: BUILD.bazel
java/src/com/google/template/soy/passes/: AddFlushPendingLoggingAttributesPass.java  AddHtmlSourceLocationsPass.java  CheckDeclaredTypesPass.java  DesugarStateNodesPass.java  EnforceExperimentalFeaturesPass.java  PassManager.java  ResolveDeclaredTypesPass.java  ResolveDottedImportsPass.java  ResolveExpressionTypesPass.java  SoyElementCompositionPass.java  TemplateImportProcessor.java  ValidateExternsPass.java
java/src/com/google/template/soy/plugin/java/restricted/: BUILD.bazel
java/src/com/google/template/soy/plugin/javascript/restricted/: BUILD.bazel
java/src/com/google/template/soy/plugin/python/restricted/: BUILD.bazel
java/src/com/google/template/soy/plugin/restricted/: BUILD.bazel
java/src/com/google/template/soy/shared/internal/gencode/: BUILD.bazel
java/src/com/google/template/soy/sharedpasses/render/: TofuTypeChecks.java
java/src/com/google/template/soy/soyparse/: BUILD.bazel
java/src/com/google/template/soy/soytree/: BUILD.bazel  ExternNode.java  HtmlAttributeNode.java  Metadata.java  TemplateMetadataSerializer.java
java/src/com/google/template/soy/soytree/defn/: TemplateParam.java
java/src/com/google/template/soy/testing/: BUILD.bazel
java/src/com/google/template/soy/types/: BUILD.bazel  DelegatingSoyTypeRegistry.java  ImplicitType.java  SoyProtoEnumType.java  SoyProtoType.java  SoyType.java  SoyTypeRegistry.java  SoyTypeRegistryBuilder.java  SoyTypes.java  TemplateBindingUtil.java  TypeRegistries.java
java/tests/com/google/template/soy/: BUILD.bazel
java/tests/com/google/template/soy/bididirectives/: BidiTestUtils.java
java/tests/com/google/template/soy/internal/i18n/: BidiGlobalDirTest.java
java/tests/com/google/template/soy/passes/: AddHtmlSourceLocationsPassTest.java  ResolveExpressionTypesPassTest.java
java/tests/com/google/template/soy/types/: SoyProtoTypeTest.java  SoyTypeRegistryTest.java
src/test/protobuf/: BUILD.bazel
testdata/javascript/: BUILD.bazel
