# Copyright 2013 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# NOTE: THIS IS A WORK IN PROGRESS AND IS NOT EXPECTED TO WORK AS WE HAVE
# NO CONTINUOUS INTEGRATION.

load("@rules_java//java:defs.bzl", "java_binary")

# Compilers

java_binary(
    name = "conformance_checker",
    main_class = "com.google.template.soy.SoyConformanceChecker",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//java/src/com/google/template/soy:SoyConformanceChecker",
    ],
)

java_binary(
    name = "header_compiler",
    main_class = "com.google.template.soy.SoyHeaderCompiler",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//java/src/com/google/template/soy:SoyHeaderCompiler",
    ],
)

java_binary(
    name = "incrementaldom_compiler",
    main_class = "com.google.template.soy.SoyToIncrementalDomSrcCompiler",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//java/src/com/google/template/soy:SoyToIncrementalDomSrcCompiler",
    ],
)

java_binary(
    name = "javascript_compiler",
    main_class = "com.google.template.soy.SoyToJsSrcCompiler",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//java/src/com/google/template/soy:SoyToJsSrcCompiler",
    ],
)

java_binary(
    name = "message_extractor",
    main_class = "com.google.template.soy.SoyMsgExtractor",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//java/src/com/google/template/soy:SoyMsgExtractor",
    ],
)

java_binary(
    name = "parseinfo_generator",
    main_class = "com.google.template.soy.SoyParseInfoGenerator",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//java/src/com/google/template/soy:SoyParseInfoGenerator",
    ],
)

java_binary(
    name = "plugin_validator",
    main_class = "com.google.template.soy.SoyPluginValidator",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//java/src/com/google/template/soy:SoyPluginValidator",
    ],
)

java_binary(
    name = "python_compiler",
    main_class = "com.google.template.soy.SoyToPySrcCompiler",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//java/src/com/google/template/soy:SoyToPySrcCompiler",
    ],
)

java_binary(
    name = "java_compiler",
    main_class = "com.google.template.soy.SoyToJbcSrcCompiler",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//java/src/com/google/template/soy:SoyToJbcSrcCompiler",
    ],
)

# Plugins

alias(
    name = "plugin",
    actual = "//java/src/com/google/template/soy/plugin/restricted",
    visibility = ["//visibility:public"],
)

alias(
    name = "java_plugin",
    actual = "//java/src/com/google/template/soy/plugin/java/restricted",
    visibility = ["//visibility:public"],
)

alias(
    name = "javascript_plugin",
    actual = "//java/src/com/google/template/soy/plugin/javascript/restricted",
    visibility = ["//visibility:public"],
)

alias(
    name = "python_plugin",
    actual = "//java/src/com/google/template/soy/plugin/python/restricted",
    visibility = ["//visibility:public"],
)

# Runtimes

alias(
    name = "parseinfo_runtime",
    actual = "//java/src/com/google/template/soy:parseinfo_runtime",
    visibility = ["//visibility:public"],
)
