# Copyright 2013 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# NOTE: THIS IS A WORK IN PROGRESS AND IS NOT EXPECTED TO WORK AS WE HAVE
# NO CONTINUOUS INTEGRATION.

load("@rules_java//java:defs.bzl", "java_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "example_proto",
    testonly = True,
    srcs = [
        "example.proto",
    ],
)

java_proto_library(
    name = "example_java_proto",
    testonly = True,
    visibility = [
        "//java/tests:__subpackages__",
    ],
    deps = [
        ":example_proto",
    ],
)

proto_library(
    name = "proto2_non_broken_proto",
    testonly = True,
    srcs = [
        "proto2_non_broken.proto",
    ],
)

java_proto_library(
    name = "proto2_non_broken_java_proto",
    testonly = True,
    visibility = [
        "//java/tests:__subpackages__",
    ],
    deps = [
        ":proto2_non_broken_proto",
    ],
)

proto_library(
    name = "proto3_proto",
    testonly = True,
    srcs = [
        "proto3.proto",
    ],
)

java_proto_library(
    name = "proto3_java_proto",
    testonly = True,
    visibility = [
        "//java/tests:__subpackages__",
    ],
    deps = [
        ":proto3_proto",
    ],
)

proto_library(
    name = "test_proto",
    testonly = True,
    srcs = [
        "test.proto",
    ],
)

java_proto_library(
    name = "test_java_proto",
    testonly = True,
    visibility = [
        "//java/tests:__subpackages__",
    ],
    deps = [
        ":test_proto",
    ],
)
