# Copyright 2013 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# NOTE: THIS IS A WORK IN PROGRESS AND IS NOT EXPECTED TO WORK AS WE HAVE
# NO CONTINUOUS INTEGRATION.

load("@rules_java//java:defs.bzl", "java_library")

shared_srcs = [
    "SoyCompilerFileReader.java",
]

compiler_lib_srcs = [
    "AbstractSoyCompiler.java",
    "CommandLineError.java",
    "FileSystemSoyFileReader.java",
    "PerInputOutputFiles.java",
    "PluginLoader.java",
    "SoyCmdLineParser.java",
    "SoyCompilerFileReader.java",
]

binary_srcs = [
    "SoyConformanceChecker.java",
    "SoyHeaderCompiler.java",
    "SoyMsgExtractor.java",
    "SoyParseInfoGenerator.java",
    "SoyPluginValidator.java",
    "SoyToIncrementalDomSrcCompiler.java",
    "SoyToJbcSrcCompiler.java",
    "SoyToJsSrcCompiler.java",
    "SoyToPySrcCompiler.java",
]

misc_srcs = [
    "data/Dir.java",
    "data/SoyDataException.java",
    "internal/i18n/BidiGlobalDir.java",
    "internal/i18n/BidiUtils.java",
    "internal/i18n/SoyBidiUtils.java",
    "shared/internal/BuiltinFunction.java",
    "shared/internal/DelTemplateSelector.java",
    "shared/internal/SharedModule.java",
    "shared/internal/SoyScopedData.java",
    "shared/internal/SoySimpleScope.java",
    "shared/restricted/ApiCallScopeBindingAnnotations.java",
    "shared/restricted/Signature.java",
    "shared/restricted/SoyDeprecated.java",
    "shared/restricted/SoyFunction.java",
    "shared/restricted/SoyFunctionSignature.java",
    "shared/restricted/SoyPrintDirective.java",
    "shared/restricted/SoyPureFunction.java",
    "shared/restricted/SoyPurePrintDirective.java",
    "shared/restricted/TypedSoyFunction.java",
    "jssrc/SoyJsSrcOptions.java",
    "pysrc/SoyPySrcOptions.java",
] + glob([
    "parseinfo/*",
])

java_library(
    name = "shared",
    srcs = shared_srcs,
    visibility = [
        "//java:__subpackages__",
    ],
    deps = [
        "@maven//:com_google_guava_guava",
    ],
)

# TODO(user): Split into smaller libraries.
java_library(
    name = "soy",
    srcs = glob(
        [
            "**/*.java",
        ],
        exclude = shared_srcs + compiler_lib_srcs + binary_srcs + misc_srcs + [
            # ANT tasks.
            "shared/internal/AbstractGenerateSoyEscapingDirectiveCode.java",
            "jssrc/internal/GenerateSoyUtilsEscapingDirectiveCode.java",
            "pysrc/internal/GeneratePySanitizeEscapingDirectiveCode.java",
        ],
    ),
    visibility = [
        "//java:__subpackages__",
    ],
    deps = [
        ":data/Dir",
        ":data/SoyDataException",
        ":internal/i18n",
        ":jssrc/SoyJsSrcOptions",
        ":parseinfo_runtime",
        ":pysrc/SoyPySrcOptions",
        ":shared",
        ":shared/internal",
        ":shared/restricted",
        "//java/src/com/google/template/soy/base",
        "//java/src/com/google/template/soy/basetree",
        "//java/src/com/google/template/soy/error",
        "//java/src/com/google/template/soy/exprtree",
        "//java/src/com/google/template/soy/internal/base",
        "//java/src/com/google/template/soy/internal/proto",
        "//java/src/com/google/template/soy/internal/targetexpr",
        "//java/src/com/google/template/soy/msgs",
        "//java/src/com/google/template/soy/msgs/internal",
        "//java/src/com/google/template/soy/msgs/restricted",
        "//java/src/com/google/template/soy/plugin/java/restricted",
        "//java/src/com/google/template/soy/plugin/javascript/restricted",
        "//java/src/com/google/template/soy/plugin/python/restricted",
        "//java/src/com/google/template/soy/plugin/restricted",
        "//java/src/com/google/template/soy/shared/internal/gencode",
        "//java/src/com/google/template/soy/soyparse",
        "//java/src/com/google/template/soy/soytree",
        "//java/src/com/google/template/soy/types",
        "//src/main/protobuf:conformance_java_proto",
        "//src/main/protobuf:css_metadata_java_proto",
        "//src/main/protobuf:logging_config_java_proto",
        "//src/main/protobuf:template_metadata_java_proto",
        "@maven//:com_google_auto_value_auto_value",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_common_html_types_types",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_extensions_guice_multibindings",
        "@maven//:com_google_inject_guice",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_ibm_icu_icu4j",
        "@maven//:javax_annotation_jsr250_api",
        "@maven//:javax_inject_javax_inject",
        "@maven//:org_json_json",
        "@maven//:org_ow2_asm_asm",
        "@maven//:org_ow2_asm_asm_commons",
        "@maven//:org_ow2_asm_asm_tree",
        "@maven//:org_ow2_asm_asm_util",
    ],
)

# Compilers

java_library(
    name = "compiler_lib",
    srcs = compiler_lib_srcs,
    visibility = [
        "//java/tests:__subpackages__",
    ],
    deps = [
        ":shared",
        ":soy",
        "//java/src/com/google/template/soy/base",
        "//java/src/com/google/template/soy/error",
        "//java/src/com/google/template/soy/msgs",
        "//java/src/com/google/template/soy/plugin/restricted",
        "//src/main/protobuf:logging_config_java_proto",
        "@maven//:args4j_args4j",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_guice",
        "@maven//:com_google_protobuf_protobuf_java",
    ],
)

java_library(
    name = "SoyConformanceChecker",
    srcs = [
        "SoyConformanceChecker.java",
    ],
    visibility = [
        "//:__pkg__",
    ],
    deps = [
        ":compiler_lib",
        ":soy",
        "//src/main/protobuf:conformance_java_proto",
        "@maven//:args4j_args4j",
        "@maven//:com_google_protobuf_protobuf_java",
    ],
)

java_library(
    name = "SoyHeaderCompiler",
    srcs = [
        "SoyHeaderCompiler.java",
    ],
    visibility = [
        "//:__pkg__",
        "//java/tests:__subpackages__",
    ],
    deps = [
        ":compiler_lib",
        ":shared/internal",
        ":soy",
        "//java/src/com/google/template/soy/exprtree",
        "//java/src/com/google/template/soy/soytree",
        "//src/main/protobuf:css_metadata_java_proto",
        "//src/main/protobuf:template_metadata_java_proto",
        "@maven//:args4j_args4j",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "SoyMsgExtractor",
    srcs = [
        "SoyMsgExtractor.java",
    ],
    visibility = [
        "//:__pkg__",
        "//java/tests:__subpackages__",
    ],
    deps = [
        ":compiler_lib",
        ":soy",
        "//java/src/com/google/template/soy/msgs",
        "//java/src/com/google/template/soy/xliffmsgplugin",
        "@maven//:args4j_args4j",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "SoyParseInfoGenerator",
    srcs = [
        "SoyParseInfoGenerator.java",
    ],
    visibility = [
        "//:__pkg__",
    ],
    deps = [
        ":compiler_lib",
        ":soy",
        "//java/src/com/google/template/soy/base",
        "//java/src/com/google/template/soy/shared/internal/gencode",
        "@maven//:args4j_args4j",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "SoyPluginValidator",
    srcs = [
        "SoyPluginValidator.java",
    ],
    visibility = [
        "//:__pkg__",
    ],
    deps = [
        ":compiler_lib",
        ":soy",
        "//java/src/com/google/template/soy/error",
        "@maven//:args4j_args4j",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "SoyToIncrementalDomSrcCompiler",
    srcs = [
        "SoyToIncrementalDomSrcCompiler.java",
    ],
    visibility = [
        "//:__pkg__",
    ],
    deps = [
        ":compiler_lib",
        ":soy",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "SoyToJbcSrcCompiler",
    srcs = [
        "SoyToJbcSrcCompiler.java",
    ],
    visibility = [
        "//:__pkg__",
    ],
    deps = [
        ":compiler_lib",
        ":soy",
        "@maven//:args4j_args4j",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "SoyToJsSrcCompiler",
    srcs = [
        "SoyToJsSrcCompiler.java",
    ],
    visibility = [
        "//:__pkg__",
    ],
    deps = [
        ":compiler_lib",
        ":jssrc/SoyJsSrcOptions",
        ":soy",
        "//java/src/com/google/template/soy/msgs",
        "//java/src/com/google/template/soy/xliffmsgplugin",
        "@maven//:args4j_args4j",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "SoyToPySrcCompiler",
    srcs = [
        "SoyToPySrcCompiler.java",
    ],
    visibility = [
        "//:__pkg__",
    ],
    deps = [
        ":compiler_lib",
        ":pysrc/SoyPySrcOptions",
        ":soy",
        "@maven//:args4j_args4j",
        "@maven//:com_google_guava_guava",
    ],
)

# Runtimes

java_library(
    name = "parseinfo_runtime",
    srcs = glob(["parseinfo/*.java"]),
    visibility = [
        "//:__pkg__",
    ],
    exports = [
        # Code generated by`SoyParseInfoGenerator` uses `Immutable{List,Map,Set}`.
        "@maven//:com_google_guava_guava",
    ],
    deps = [
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
    ],
)

alias(
    name = "soysauce_runtime",
    # TODO(yannic): Create a smaller runtime.
    actual = ":soy",
    visibility = [
        "//:__pkg__",
    ],
)

# Misc

java_library(
    name = "data/Dir",
    srcs = [
        "data/Dir.java",
    ],
    visibility = [
        "//java:__subpackages__",
    ],
)

java_library(
    name = "data/SoyDataException",
    srcs = [
        "data/SoyDataException.java",
    ],
    visibility = [
        "//java:__subpackages__",
    ],
    deps = [
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "internal/i18n",
    srcs = [
        "internal/i18n/BidiGlobalDir.java",
        "internal/i18n/BidiUtils.java",
        "internal/i18n/SoyBidiUtils.java",
    ],
    visibility = [
        "//java:__subpackages__",
    ],
    deps = [
        ":data/Dir",
        "//java/src/com/google/template/soy/base",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_ibm_icu_icu4j",
    ],
)

java_library(
    name = "jssrc/SoyJsSrcOptions",
    srcs = [
        "jssrc/SoyJsSrcOptions.java",
    ],
    visibility = [
        "//java:__subpackages__",
    ],
    deps = [
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "pysrc/SoyPySrcOptions",
    srcs = [
        "pysrc/SoyPySrcOptions.java",
    ],
    visibility = [
        "//java:__subpackages__",
    ],
    deps = [
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "shared/internal",
    srcs = [
        "shared/internal/BuiltinFunction.java",
        "shared/internal/DelTemplateSelector.java",
        "shared/internal/SharedModule.java",
        "shared/internal/SoyScopedData.java",
        "shared/internal/SoySimpleScope.java",
    ],
    visibility = [
        "//java:__subpackages__",
    ],
    deps = [
        ":internal/i18n",
        ":shared/restricted",
        "//java/src/com/google/template/soy/msgs",
        "@maven//:com_google_auto_value_auto_value",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_extensions_guice_multibindings",
        "@maven//:com_google_inject_guice",
        "@maven//:javax_inject_javax_inject",
    ],
)

java_library(
    name = "shared/restricted",
    srcs = [
        "shared/restricted/ApiCallScopeBindingAnnotations.java",
        "shared/restricted/Signature.java",
        "shared/restricted/SoyDeprecated.java",
        "shared/restricted/SoyFunction.java",
        "shared/restricted/SoyFunctionSignature.java",
        "shared/restricted/SoyPrintDirective.java",
        "shared/restricted/SoyPureFunction.java",
        "shared/restricted/SoyPurePrintDirective.java",
        "shared/restricted/TypedSoyFunction.java",
    ],
    visibility = [
        "//java:__subpackages__",
    ],
    deps = [
        "@maven//:com_google_guava_guava",
        "@maven//:javax_inject_javax_inject",
    ],
)
