# Copyright 2013 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# NOTE: THIS IS A WORK IN PROGRESS AND IS NOT EXPECTED TO WORK AS WE HAVE
# NO CONTINUOUS INTEGRATION.

load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "restricted",
    srcs = glob(
        [
            "*.java",
        ],
        exclude = [
            "SoyMsg.java",
            "SoyMsgPart.java",
        ],
    ),
    visibility = [
        "//java:__subpackages__",
    ],
    exports = [
        ":SoyMsg",
        ":SoyMsgPart",
    ],
    deps = [
        ":SoyMsg",
        ":SoyMsgPart",
        "//java/src/com/google/template/soy:internal/i18n",
        "//java/src/com/google/template/soy/msgs",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_ibm_icu_icu4j",
    ],
)

java_library(
    name = "SoyMsg",
    srcs = [
        "SoyMsg.java",
    ],
    visibility = [
        "//java/src/com/google/template/soy/msgs:__pkg__",
    ],
    deps = [
        ":SoyMsgPart",
        "//java/src/com/google/template/soy/base",
        "@maven//:com_google_auto_value_auto_value",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
    ],
)

java_library(
    name = "SoyMsgPart",
    srcs = [
        "SoyMsgPart.java",
    ],
    visibility = [
        "//java/src/com/google/template/soy/msgs:__pkg__",
    ],
    deps = [
        "@maven//:com_google_auto_value_auto_value",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_errorprone_error_prone_annotations",
        "@maven//:com_google_guava_guava",
    ],
)
